--- a/archives/toutiao-search/2024-04-06.md
+++ b/archives/toutiao-search/2024-04-06.md
@@ -1,73 +1,86 @@
 # 2024-04-06
 
-共 291 条
+共 300 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Apr 06 2024 22:00:37 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sat Apr 06 2024 23:00:43 GMT+0800 (China Standard Time) -->
 1. [美国以色列高度戒备：伊朗或发动袭击](https://so.toutiao.com/search?keyword=美国以色列高度戒备：伊朗或发动袭击)
-1. [金饰价格突破700元 大批黄金原料回购](https://so.toutiao.com/search?keyword=金饰价格突破700元+大批黄金原料回购)
-1. [今年春播粮食意向面积超9.5亿亩](https://so.toutiao.com/search?keyword=今年春播粮食意向面积超9.5亿亩)
 1. [胖东来今年将安排全员出国游](https://so.toutiao.com/search?keyword=胖东来今年将安排全员出国游)
+1. [清明文旅消费一线新观察](https://so.toutiao.com/search?keyword=清明文旅消费一线新观察)
 1. [真主党：以色列遭伊朗报复不可避免](https://so.toutiao.com/search?keyword=真主党：以色列遭伊朗报复不可避免)
-1. [以色列承认“犯严重错误” 白宫回应](https://so.toutiao.com/search?keyword=以色列承认“犯严重错误”+白宫回应)
-1. [警务机器人回派出所充电却没人开门](https://so.toutiao.com/search?keyword=警务机器人回派出所充电却没人开门)
+1. [金饰价格突破700元 大批黄金原料回购](https://so.toutiao.com/search?keyword=金饰价格突破700元+大批黄金原料回购)
+1. [小米回应SU7保费和50多万油车接近](https://so.toutiao.com/search?keyword=小米回应SU7保费和50多万油车接近)
 1. [菲律宾侵闯南沙鲎藤礁 中方回应](https://so.toutiao.com/search?keyword=菲律宾侵闯南沙鲎藤礁+中方回应)
-1. [塔吉克斯坦总统拉赫蒙会见王小洪](https://so.toutiao.com/search?keyword=塔吉克斯坦总统拉赫蒙会见王小洪)
 1. [女子猛砸奔驰车称其压到自家蒜苗](https://so.toutiao.com/search?keyword=女子猛砸奔驰车称其压到自家蒜苗)
-1. [2024电视剧品质盛典](https://so.toutiao.com/search?keyword=2024电视剧品质盛典)
+1. [辽宁男篮夺CBA常规赛冠军](https://so.toutiao.com/search?keyword=辽宁男篮夺CBA常规赛冠军)
+1. [警务机器人回派出所充电却没人开门](https://so.toutiao.com/search?keyword=警务机器人回派出所充电却没人开门)
+1. [以色列承认“犯严重错误” 白宫回应](https://so.toutiao.com/search?keyword=以色列承认“犯严重错误”+白宫回应)
 1. [88岁硬核爷爷惊艳上海时装周](https://so.toutiao.com/search?keyword=88岁硬核爷爷惊艳上海时装周)
 1. [天水麻辣烫大叔辟谣网售调料包](https://so.toutiao.com/search?keyword=天水麻辣烫大叔辟谣网售调料包)
 1. [雷军称大家用放大镜看SU7压力很大](https://so.toutiao.com/search?keyword=雷军称大家用放大镜看SU7压力很大)
-1. [耶伦访华背的斜挎包里装了啥](https://so.toutiao.com/search?keyword=耶伦访华背的斜挎包里装了啥)
 1. [成人也会“中招”百日咳吗](https://so.toutiao.com/search?keyword=成人也会“中招”百日咳吗)
-1. [小米SU7线束是铝不是铜？官方回应](https://so.toutiao.com/search?keyword=小米SU7线束是铝不是铜？官方回应)
-1. [张核子向母校捐款26万元](https://so.toutiao.com/search?keyword=张核子向母校捐款26万元)
-1. [山东超然楼亮灯瞬间好惊艳](https://so.toutiao.com/search?keyword=山东超然楼亮灯瞬间好惊艳)
-1. [《与凤行》获得爆剧认证](https://so.toutiao.com/search?keyword=《与凤行》获得爆剧认证)
-1. [女子半截身体被卷进扶梯](https://so.toutiao.com/search?keyword=女子半截身体被卷进扶梯)
-1. [普京：俄罗斯几乎不存在失业情况](https://so.toutiao.com/search?keyword=普京：俄罗斯几乎不存在失业情况)
-1. [专家：马英九率团访陆带来一大启发](https://so.toutiao.com/search?keyword=专家：马英九率团访陆带来一大启发)
 1. [男子梦到彩票号码买中3千万 官方回应](https://so.toutiao.com/search?keyword=男子梦到彩票号码买中3千万+官方回应)
-1. [张爱军不再担任江苏省委常委职务](https://so.toutiao.com/search?keyword=张爱军不再担任江苏省委常委职务)
-1. [男子在博物院猥亵两女子被抓](https://so.toutiao.com/search?keyword=男子在博物院猥亵两女子被抓)
+1. [《追风者》沈近真下线](https://so.toutiao.com/search?keyword=《追风者》沈近真下线)
+1. [小米SU7线束是铝不是铜？官方回应](https://so.toutiao.com/search?keyword=小米SU7线束是铝不是铜？官方回应)
+1. [耶伦访华背的斜挎包里装了啥](https://so.toutiao.com/search?keyword=耶伦访华背的斜挎包里装了啥)
+1. [《追风者》林樵松背刺美娟](https://so.toutiao.com/search?keyword=《追风者》林樵松背刺美娟)
+1. [专家：马英九率团访陆带来一大启发](https://so.toutiao.com/search?keyword=专家：马英九率团访陆带来一大启发)
+1. [女子半截身体被卷进扶梯](https://so.toutiao.com/search?keyword=女子半截身体被卷进扶梯)
+1. [《与凤行》获得爆剧认证](https://so.toutiao.com/search?keyword=《与凤行》获得爆剧认证)
+1. [山东超然楼亮灯瞬间好惊艳](https://so.toutiao.com/search?keyword=山东超然楼亮灯瞬间好惊艳)
+1. [开封王婆称自己是恋爱脑](https://so.toutiao.com/search?keyword=开封王婆称自己是恋爱脑)
 1. [兰大回应虐猫考生进调剂名单](https://so.toutiao.com/search?keyword=兰大回应虐猫考生进调剂名单)
-1. [韦世豪发泄情绪故意踢走皮球吃黄牌](https://so.toutiao.com/search?keyword=韦世豪发泄情绪故意踢走皮球吃黄牌)
-1. [高速堵车现场秒变小米SU7车展](https://so.toutiao.com/search?keyword=高速堵车现场秒变小米SU7车展)
-1. [媒体评南大拒绝录取虐猫考研生](https://so.toutiao.com/search?keyword=媒体评南大拒绝录取虐猫考研生)
 1. [消防员和村民合力捕杀两条眼镜王蛇](https://so.toutiao.com/search?keyword=消防员和村民合力捕杀两条眼镜王蛇)
+1. [张爱军不再担任江苏省委常委职务](https://so.toutiao.com/search?keyword=张爱军不再担任江苏省委常委职务)
+1. [《斗破苍穹》萧炎将代表韩家应战](https://so.toutiao.com/search?keyword=《斗破苍穹》萧炎将代表韩家应战)
+1. [中央气象台发布暴雨蓝色预警](https://so.toutiao.com/search?keyword=中央气象台发布暴雨蓝色预警)
+1. [张核子向母校捐款26万元](https://so.toutiao.com/search?keyword=张核子向母校捐款26万元)
+1. [女子称被盗一万七 民警找回二万七](https://so.toutiao.com/search?keyword=女子称被盗一万七+民警找回二万七)
+1. [俄媒称2名乌军士兵射杀2名战友](https://so.toutiao.com/search?keyword=俄媒称2名乌军士兵射杀2名战友)
+1. [小米SU7标准版不支持城市NOA功能](https://so.toutiao.com/search?keyword=小米SU7标准版不支持城市NOA功能)
+1. [周定洋社媒：开心能在客场取胜](https://so.toutiao.com/search?keyword=周定洋社媒：开心能在客场取胜)
+1. [3000名瓦格纳士兵加入车臣特种部队](https://so.toutiao.com/search?keyword=3000名瓦格纳士兵加入车臣特种部队)
+1. [美要求伊朗别将其设施作为打击目标](https://so.toutiao.com/search?keyword=美要求伊朗别将其设施作为打击目标)
+1. [于根伟：我们确实犯了一些错误](https://so.toutiao.com/search?keyword=于根伟：我们确实犯了一些错误)
+1. [女子脚踝受伤半年 医生“秒接回”](https://so.toutiao.com/search?keyword=女子脚踝受伤半年+医生“秒接回”)
+1. [墨西哥为何突然宣布与厄瓜多尔断交](https://so.toutiao.com/search?keyword=墨西哥为何突然宣布与厄瓜多尔断交)
+1. [耶伦希望美企在中国继续取得成功](https://so.toutiao.com/search?keyword=耶伦希望美企在中国继续取得成功)
+1. [云南脚踩商贩城管均被开除](https://so.toutiao.com/search?keyword=云南脚踩商贩城管均被开除)
+1. [高速堵车现场秒变小米SU7车展](https://so.toutiao.com/search?keyword=高速堵车现场秒变小米SU7车展)
+1. [专家：耶伦访广东了解中国优势产业](https://so.toutiao.com/search?keyword=专家：耶伦访广东了解中国优势产业)
+1. [俄军俘获乌“革命性武器”](https://so.toutiao.com/search?keyword=俄军俘获乌“革命性武器”)
+1. [伊朗警告美国：别落入以色列陷阱](https://so.toutiao.com/search?keyword=伊朗警告美国：别落入以色列陷阱)
+1. [耶伦：广州在中国经济史上地位独特](https://so.toutiao.com/search?keyword=耶伦：广州在中国经济史上地位独特)
+1. [打碎一个酒店杯子被要求赔偿150元](https://so.toutiao.com/search?keyword=打碎一个酒店杯子被要求赔偿150元)
+1. [媒体评南大拒绝录取虐猫考研生](https://so.toutiao.com/search?keyword=媒体评南大拒绝录取虐猫考研生)
+1. [普京：俄罗斯几乎不存在失业情况](https://so.toutiao.com/search?keyword=普京：俄罗斯几乎不存在失业情况)
+1. [今年春播粮食意向面积超9.5亿亩](https://so.toutiao.com/search?keyword=今年春播粮食意向面积超9.5亿亩)
+1. [塔吉克斯坦总统拉赫蒙会见王小洪](https://so.toutiao.com/search?keyword=塔吉克斯坦总统拉赫蒙会见王小洪)
+1. [2024电视剧品质盛典](https://so.toutiao.com/search?keyword=2024电视剧品质盛典)
+1. [男子在博物院猥亵两女子被抓](https://so.toutiao.com/search?keyword=男子在博物院猥亵两女子被抓)
+1. [韦世豪发泄情绪故意踢走皮球吃黄牌](https://so.toutiao.com/search?keyword=韦世豪发泄情绪故意踢走皮球吃黄牌)
 1. [特朗普：若我知有恐袭直接通知普京](https://so.toutiao.com/search?keyword=特朗普：若我知有恐袭直接通知普京)
 1. [品牌饮料上架香菜汁且购买送呕吐袋](https://so.toutiao.com/search?keyword=品牌饮料上架香菜汁且购买送呕吐袋)
-1. [3000名瓦格纳士兵加入车臣特种部队](https://so.toutiao.com/search?keyword=3000名瓦格纳士兵加入车臣特种部队)
 1. [三大运营商回应注销手机号](https://so.toutiao.com/search?keyword=三大运营商回应注销手机号)
-1. [女子称被盗一万七 民警找回二万七](https://so.toutiao.com/search?keyword=女子称被盗一万七+民警找回二万七)
 1. [男孩玩泥巴 自己搭建收拾乐此不疲](https://so.toutiao.com/search?keyword=男孩玩泥巴+自己搭建收拾乐此不疲)
 1. [清明济南变“挤”南](https://so.toutiao.com/search?keyword=清明济南变“挤”南)
 1. [当外国人看到兵马俑有多震撼](https://so.toutiao.com/search?keyword=当外国人看到兵马俑有多震撼)
 1. [徐亮谈国安开局两胜两平](https://so.toutiao.com/search?keyword=徐亮谈国安开局两胜两平)
 1. [麦当劳今年股价下跌近10%](https://so.toutiao.com/search?keyword=麦当劳今年股价下跌近10%)
 1. [天水多个区县住宿率接近100%](https://so.toutiao.com/search?keyword=天水多个区县住宿率接近100%)
-1. [云南脚踩商贩城管均被开除](https://so.toutiao.com/search?keyword=云南脚踩商贩城管均被开除)
-1. [俄军俘获乌“革命性武器”](https://so.toutiao.com/search?keyword=俄军俘获乌“革命性武器”)
-1. [开封王婆称自己是恋爱脑](https://so.toutiao.com/search?keyword=开封王婆称自己是恋爱脑)
 1. [多家中小银行宣布下调存款利率](https://so.toutiao.com/search?keyword=多家中小银行宣布下调存款利率)
-1. [耶伦：广州在中国经济史上地位独特](https://so.toutiao.com/search?keyword=耶伦：广州在中国经济史上地位独特)
-1. [中央气象台发布暴雨蓝色预警](https://so.toutiao.com/search?keyword=中央气象台发布暴雨蓝色预警)
 1. [谷爱凌哈佛演讲](https://so.toutiao.com/search?keyword=谷爱凌哈佛演讲)
-1. [墨西哥为何突然宣布与厄瓜多尔断交](https://so.toutiao.com/search?keyword=墨西哥为何突然宣布与厄瓜多尔断交)
 1. [戴军瞿颖分享冻龄秘诀](https://so.toutiao.com/search?keyword=戴军瞿颖分享冻龄秘诀)
 1. [大爷锻炼玩弹弓射穿对楼玻璃被抓](https://so.toutiao.com/search?keyword=大爷锻炼玩弹弓射穿对楼玻璃被抓)
-1. [俄媒称2名乌军士兵射杀2名战友](https://so.toutiao.com/search?keyword=俄媒称2名乌军士兵射杀2名战友)
 1. [中国西北古城甘肃天水持续“热辣”](https://so.toutiao.com/search?keyword=中国西北古城甘肃天水持续“热辣”)
 1. [男子因机票退改签险些损失375万](https://so.toutiao.com/search?keyword=男子因机票退改签险些损失375万)
 1. [小米汽车：暂未推出置换优惠政策](https://so.toutiao.com/search?keyword=小米汽车：暂未推出置换优惠政策)
-1. [打碎一个酒店杯子被要求赔偿150元](https://so.toutiao.com/search?keyword=打碎一个酒店杯子被要求赔偿150元)
 1. [全新AMG GT63海外到店实拍](https://so.toutiao.com/search?keyword=全新AMG+GT63海外到店实拍)
 1. [6车连撞 车主排排站等待交警处理](https://so.toutiao.com/search?keyword=6车连撞+车主排排站等待交警处理)
 1. [名嘴谈台军欲在乌丘屿实弹射击](https://so.toutiao.com/search?keyword=名嘴谈台军欲在乌丘屿实弹射击)
 1. [云南一工地挖出二战遗留航空炸弹](https://so.toutiao.com/search?keyword=云南一工地挖出二战遗留航空炸弹)
 1. [首饰金价最高达每克710元](https://so.toutiao.com/search?keyword=首饰金价最高达每克710元)
 1. [实拍五菱缤果PLUS 510公里旗舰版](https://so.toutiao.com/search?keyword=实拍五菱缤果PLUS+510公里旗舰版)
-1. [女子脚踝受伤半年 医生“秒接回”](https://so.toutiao.com/search?keyword=女子脚踝受伤半年+医生“秒接回”)
 1. [亲历纽约地震的华人：一天都觉得晕](https://so.toutiao.com/search?keyword=亲历纽约地震的华人：一天都觉得晕)
 1. [纽约地区发生140年来最大地震](https://so.toutiao.com/search?keyword=纽约地区发生140年来最大地震)
 1. [马英九率台青参观西安兵马俑博物馆](https://so.toutiao.com/search?keyword=马英九率台青参观西安兵马俑博物馆)
@@ -75,11 +88,8 @@
 1. [雷军：大家拿着放大镜看小米SU7](https://so.toutiao.com/search?keyword=雷军：大家拿着放大镜看小米SU7)
 1. [罗慕洛时隔308天重返中超](https://so.toutiao.com/search?keyword=罗慕洛时隔308天重返中超)
 1. [云南昭通4.9级地震 山石崩落砸中小车](https://so.toutiao.com/search?keyword=云南昭通4.9级地震+山石崩落砸中小车)
-1. [美要求伊朗别将其设施作为打击目标](https://so.toutiao.com/search?keyword=美要求伊朗别将其设施作为打击目标)
-1. [专家：耶伦访广东了解中国优势产业](https://so.toutiao.com/search?keyword=专家：耶伦访广东了解中国优势产业)
 1. [孙俪过了大提琴一级考试](https://so.toutiao.com/search?keyword=孙俪过了大提琴一级考试)
 1. [哈萨克斯坦遭遇80年以来最严重洪灾](https://so.toutiao.com/search?keyword=哈萨克斯坦遭遇80年以来最严重洪灾)
-1. [耶伦希望美企在中国继续取得成功](https://so.toutiao.com/search?keyword=耶伦希望美企在中国继续取得成功)
 1. [女子被卷入扶梯 家属称有截肢风险](https://so.toutiao.com/search?keyword=女子被卷入扶梯+家属称有截肢风险)
 1. [张亚中谈赖清德上任后两岸关系走势](https://so.toutiao.com/search?keyword=张亚中谈赖清德上任后两岸关系走势)
 1. [警方回应女子举报前夫殴打女儿](https://so.toutiao.com/search?keyword=警方回应女子举报前夫殴打女儿)
@@ -137,7 +147,6 @@
 1. [清明全国景区看起来都像有1亿人](https://so.toutiao.com/search?keyword=清明全国景区看起来都像有1亿人)
 1. [小伙用纸箱投影缅怀宗庆后](https://so.toutiao.com/search?keyword=小伙用纸箱投影缅怀宗庆后)
 1. [云南昭通鲁甸县发生4.9级地震](https://so.toutiao.com/search?keyword=云南昭通鲁甸县发生4.9级地震)
-1. [伊朗警告美国：别落入以色列陷阱](https://so.toutiao.com/search?keyword=伊朗警告美国：别落入以色列陷阱)
 1. [女子拍照被小孩哥抢镜配音“18岁”](https://so.toutiao.com/search?keyword=女子拍照被小孩哥抢镜配音“18岁”)
 1. [美媒：地震时自由女神像明显颤动](https://so.toutiao.com/search?keyword=美媒：地震时自由女神像明显颤动)
 1. [纪念国安去世球迷全场亮起星光](https://so.toutiao.com/search?keyword=纪念国安去世球迷全场亮起星光)
