--- a/archives/toutiao-search/2024-04-07.md
+++ b/archives/toutiao-search/2024-04-07.md
@@ -1,65 +1,78 @@
 # 2024-04-07
 
-共 86 条
+共 96 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sun Apr 07 2024 04:00:44 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sun Apr 07 2024 05:00:38 GMT+0800 (China Standard Time) -->
 1. [美国以色列高度戒备：伊朗或发动袭击](https://so.toutiao.com/search?keyword=美国以色列高度戒备：伊朗或发动袭击)
-1. [男子因机票退改签险些损失375万](https://so.toutiao.com/search?keyword=男子因机票退改签险些损失375万)
+1. [消防员和村民合力捕杀两条眼镜王蛇](https://so.toutiao.com/search?keyword=消防员和村民合力捕杀两条眼镜王蛇)
 1. [清明文旅消费一线新观察](https://so.toutiao.com/search?keyword=清明文旅消费一线新观察)
 1. [真主党：以色列遭伊朗报复不可避免](https://so.toutiao.com/search?keyword=真主党：以色列遭伊朗报复不可避免)
-1. [金饰价格突破700元 大批黄金原料回购](https://so.toutiao.com/search?keyword=金饰价格突破700元+大批黄金原料回购)
 1. [胖东来今年将安排全员出国游](https://so.toutiao.com/search?keyword=胖东来今年将安排全员出国游)
-1. [菲律宾侵闯南沙鲎藤礁 中方回应](https://so.toutiao.com/search?keyword=菲律宾侵闯南沙鲎藤礁+中方回应)
-1. [耶伦访华背的斜挎包里装了啥](https://so.toutiao.com/search?keyword=耶伦访华背的斜挎包里装了啥)
+1. [金饰价格突破700元 大批黄金原料回购](https://so.toutiao.com/search?keyword=金饰价格突破700元+大批黄金原料回购)
+1. [邓炳强：完成23条立法“不枉此生”](https://so.toutiao.com/search?keyword=邓炳强：完成23条立法“不枉此生”)
 1. [女子猛砸奔驰车称其压到自家蒜苗](https://so.toutiao.com/search?keyword=女子猛砸奔驰车称其压到自家蒜苗)
+1. [菲律宾侵闯南沙鲎藤礁 中方回应](https://so.toutiao.com/search?keyword=菲律宾侵闯南沙鲎藤礁+中方回应)
 1. [云南脚踩商贩城管均被开除](https://so.toutiao.com/search?keyword=云南脚踩商贩城管均被开除)
 1. [以色列承认“犯严重错误” 白宫回应](https://so.toutiao.com/search?keyword=以色列承认“犯严重错误”+白宫回应)
-1. [小米SU7线束是铝不是铜？官方回应](https://so.toutiao.com/search?keyword=小米SU7线束是铝不是铜？官方回应)
+1. [耶伦访华背的斜挎包里装了啥](https://so.toutiao.com/search?keyword=耶伦访华背的斜挎包里装了啥)
 1. [天水麻辣烫大叔辟谣网售调料包](https://so.toutiao.com/search?keyword=天水麻辣烫大叔辟谣网售调料包)
-1. [专家：耶伦访广东了解中国优势产业](https://so.toutiao.com/search?keyword=专家：耶伦访广东了解中国优势产业)
-1. [墨西哥为何突然宣布与厄瓜多尔断交](https://so.toutiao.com/search?keyword=墨西哥为何突然宣布与厄瓜多尔断交)
-1. [消防员和村民合力捕杀两条眼镜王蛇](https://so.toutiao.com/search?keyword=消防员和村民合力捕杀两条眼镜王蛇)
-1. [《追风者》沈近真下线](https://so.toutiao.com/search?keyword=《追风者》沈近真下线)
-1. [以色列火速回应美国“最后通牒”](https://so.toutiao.com/search?keyword=以色列火速回应美国“最后通牒”)
-1. [警务机器人回派出所充电却没人开门](https://so.toutiao.com/search?keyword=警务机器人回派出所充电却没人开门)
-1. [小米回应SU7保费和50多万油车接近](https://so.toutiao.com/search?keyword=小米回应SU7保费和50多万油车接近)
-1. [女子半截身体被卷进扶梯](https://so.toutiao.com/search?keyword=女子半截身体被卷进扶梯)
-1. [炸馆事件会否引燃伊朗和以色列冲突](https://so.toutiao.com/search?keyword=炸馆事件会否引燃伊朗和以色列冲突)
-1. [马英九寻根问祖对马援像三鞠躬](https://so.toutiao.com/search?keyword=马英九寻根问祖对马援像三鞠躬)
-1. [三大运营商回应注销手机号](https://so.toutiao.com/search?keyword=三大运营商回应注销手机号)
+1. [小米SU7线束是铝不是铜？官方回应](https://so.toutiao.com/search?keyword=小米SU7线束是铝不是铜？官方回应)
+1. [3000名瓦格纳士兵加入车臣特种部队](https://so.toutiao.com/search?keyword=3000名瓦格纳士兵加入车臣特种部队)
 1. [美要求伊朗别将其设施作为打击目标](https://so.toutiao.com/search?keyword=美要求伊朗别将其设施作为打击目标)
+1. [《追风者》沈近真下线](https://so.toutiao.com/search?keyword=《追风者》沈近真下线)
+1. [马英九寻根问祖对马援像三鞠躬](https://so.toutiao.com/search?keyword=马英九寻根问祖对马援像三鞠躬)
+1. [男子梦到彩票号码买中3千万 官方回应](https://so.toutiao.com/search?keyword=男子梦到彩票号码买中3千万+官方回应)
+1. [以色列火速回应美国“最后通牒”](https://so.toutiao.com/search?keyword=以色列火速回应美国“最后通牒”)
+1. [女子半截身体被卷进扶梯](https://so.toutiao.com/search?keyword=女子半截身体被卷进扶梯)
+1. [美媒：地震时自由女神像明显颤动](https://so.toutiao.com/search?keyword=美媒：地震时自由女神像明显颤动)
+1. [炸馆事件会否引燃伊朗和以色列冲突](https://so.toutiao.com/search?keyword=炸馆事件会否引燃伊朗和以色列冲突)
 1. [开封王婆称自己是恋爱脑](https://so.toutiao.com/search?keyword=开封王婆称自己是恋爱脑)
-1. [耶伦希望美企在中国继续取得成功](https://so.toutiao.com/search?keyword=耶伦希望美企在中国继续取得成功)
-1. [辽宁男篮夺CBA常规赛冠军](https://so.toutiao.com/search?keyword=辽宁男篮夺CBA常规赛冠军)
+1. [专家：耶伦访广东了解中国优势产业](https://so.toutiao.com/search?keyword=专家：耶伦访广东了解中国优势产业)
+1. [美媒称伊朗可能下周发动袭击报复](https://so.toutiao.com/search?keyword=美媒称伊朗可能下周发动袭击报复)
+1. [墨西哥为何突然宣布与厄瓜多尔断交](https://so.toutiao.com/search?keyword=墨西哥为何突然宣布与厄瓜多尔断交)
+1. [女子提新车才一周遭遇连环车祸](https://so.toutiao.com/search?keyword=女子提新车才一周遭遇连环车祸)
+1. [特斯拉即将推出Robotaxi服务](https://so.toutiao.com/search?keyword=特斯拉即将推出Robotaxi服务)
+1. [小米回应SU7保费和50多万油车接近](https://so.toutiao.com/search?keyword=小米回应SU7保费和50多万油车接近)
+1. [兰大回应虐猫考生进调剂名单](https://so.toutiao.com/search?keyword=兰大回应虐猫考生进调剂名单)
+1. [于根伟：我们确实犯了一些错误](https://so.toutiao.com/search?keyword=于根伟：我们确实犯了一些错误)
+1. [马斯克：8月8日推出无人驾驶出租车](https://so.toutiao.com/search?keyword=马斯克：8月8日推出无人驾驶出租车)
 1. [伊朗警告美国：别落入以色列陷阱](https://so.toutiao.com/search?keyword=伊朗警告美国：别落入以色列陷阱)
+1. [辽宁男篮夺CBA常规赛冠军](https://so.toutiao.com/search?keyword=辽宁男篮夺CBA常规赛冠军)
+1. [耶伦希望美企在中国继续取得成功](https://so.toutiao.com/search?keyword=耶伦希望美企在中国继续取得成功)
+1. [乌方称俄导弹袭哈尔科夫市已致7死](https://so.toutiao.com/search?keyword=乌方称俄导弹袭哈尔科夫市已致7死)
+1. [“烟卡”成为广州小学生新宠](https://so.toutiao.com/search?keyword=“烟卡”成为广州小学生新宠)
+1. [中国科研人员取得智能纤维原创成果](https://so.toutiao.com/search?keyword=中国科研人员取得智能纤维原创成果)
+1. [俄媒称2名乌军士兵射杀2名战友](https://so.toutiao.com/search?keyword=俄媒称2名乌军士兵射杀2名战友)
+1. [外媒：美菲日澳将在南海联合演习](https://so.toutiao.com/search?keyword=外媒：美菲日澳将在南海联合演习)
+1. [媒体评南大拒绝录取虐猫考研生](https://so.toutiao.com/search?keyword=媒体评南大拒绝录取虐猫考研生)
+1. [小米SU7标准版不支持城市NOA功能](https://so.toutiao.com/search?keyword=小米SU7标准版不支持城市NOA功能)
+1. [麦当劳收回以全部225家门店所有权](https://so.toutiao.com/search?keyword=麦当劳收回以全部225家门店所有权)
+1. [警务机器人回派出所充电却没人开门](https://so.toutiao.com/search?keyword=警务机器人回派出所充电却没人开门)
+1. [被网贷催收威胁 女子欲跳6楼被救](https://so.toutiao.com/search?keyword=被网贷催收威胁+女子欲跳6楼被救)
+1. [女子脚踝受伤半年 医生“秒接回”](https://so.toutiao.com/search?keyword=女子脚踝受伤半年+医生“秒接回”)
+1. [女子称被盗一万七 民警找回二万七](https://so.toutiao.com/search?keyword=女子称被盗一万七+民警找回二万七)
+1. [多家中小银行宣布下调存款利率](https://so.toutiao.com/search?keyword=多家中小银行宣布下调存款利率)
+1. [松花江干流哈尔滨段开江](https://so.toutiao.com/search?keyword=松花江干流哈尔滨段开江)
+1. [男子因机票退改签险些损失375万](https://so.toutiao.com/search?keyword=男子因机票退改签险些损失375万)
+1. [三大运营商回应注销手机号](https://so.toutiao.com/search?keyword=三大运营商回应注销手机号)
 1. [14岁中国球员王磊被本菲卡教练盛赞](https://so.toutiao.com/search?keyword=14岁中国球员王磊被本菲卡教练盛赞)
 1. [乌公布通过海上临时走廊出口货物量](https://so.toutiao.com/search?keyword=乌公布通过海上临时走廊出口货物量)
-1. [女子称被盗一万七 民警找回二万七](https://so.toutiao.com/search?keyword=女子称被盗一万七+民警找回二万七)
 1. [王磊：荣幸参加葡萄牙U15集训](https://so.toutiao.com/search?keyword=王磊：荣幸参加葡萄牙U15集训)
 1. [女子遇完美租客诈骗 家人报警求助](https://so.toutiao.com/search?keyword=女子遇完美租客诈骗+家人报警求助)
-1. [“烟卡”成为广州小学生新宠](https://so.toutiao.com/search?keyword=“烟卡”成为广州小学生新宠)
 1. [海关：旅客携带黄金超50克需申报](https://so.toutiao.com/search?keyword=海关：旅客携带黄金超50克需申报)
-1. [美媒：地震时自由女神像明显颤动](https://so.toutiao.com/search?keyword=美媒：地震时自由女神像明显颤动)
-1. [男子梦到彩票号码买中3千万 官方回应](https://so.toutiao.com/search?keyword=男子梦到彩票号码买中3千万+官方回应)
-1. [俄媒称2名乌军士兵射杀2名战友](https://so.toutiao.com/search?keyword=俄媒称2名乌军士兵射杀2名战友)
 1. [打碎一个酒店杯子被要求赔偿150元](https://so.toutiao.com/search?keyword=打碎一个酒店杯子被要求赔偿150元)
 1. [学者：北约是专注于发动战争的组织](https://so.toutiao.com/search?keyword=学者：北约是专注于发动战争的组织)
-1. [3000名瓦格纳士兵加入车臣特种部队](https://so.toutiao.com/search?keyword=3000名瓦格纳士兵加入车臣特种部队)
 1. [波音客机发动机起火致航班取消](https://so.toutiao.com/search?keyword=波音客机发动机起火致航班取消)
-1. [女子脚踝受伤半年 医生“秒接回”](https://so.toutiao.com/search?keyword=女子脚踝受伤半年+医生“秒接回”)
 1. [韩国国会换届选举提前投票结束](https://so.toutiao.com/search?keyword=韩国国会换届选举提前投票结束)
-1. [外媒：美菲日澳将在南海联合演习](https://so.toutiao.com/search?keyword=外媒：美菲日澳将在南海联合演习)
 1. [媒体人：艾克森只剩两个月的救赎期](https://so.toutiao.com/search?keyword=媒体人：艾克森只剩两个月的救赎期)
 1. [北约秘书长强调作战部队不会赴乌](https://so.toutiao.com/search?keyword=北约秘书长强调作战部队不会赴乌)
 1. [雷军称大家用放大镜看SU7压力很大](https://so.toutiao.com/search?keyword=雷军称大家用放大镜看SU7压力很大)
 1. [今年唯一的日全食即将在北美洲上演](https://so.toutiao.com/search?keyword=今年唯一的日全食即将在北美洲上演)
 1. [遇袭援助组织拒绝接受以军调查结果](https://so.toutiao.com/search?keyword=遇袭援助组织拒绝接受以军调查结果)
-1. [麦当劳收回以全部225家门店所有权](https://so.toutiao.com/search?keyword=麦当劳收回以全部225家门店所有权)
 1. [麦当劳今年股价下跌近10%](https://so.toutiao.com/search?keyword=麦当劳今年股价下跌近10%)
 1. [泰媒：中泰之战放沈阳不利泰国队](https://so.toutiao.com/search?keyword=泰媒：中泰之战放沈阳不利泰国队)
 1. [多方呼吁调查以军炸死援助人员一事](https://so.toutiao.com/search?keyword=多方呼吁调查以军炸死援助人员一事)
-1. [于根伟：我们确实犯了一些错误](https://so.toutiao.com/search?keyword=于根伟：我们确实犯了一些错误)
 1. [厄瓜多尔武装冲突以来逮捕1.8万人](https://so.toutiao.com/search?keyword=厄瓜多尔武装冲突以来逮捕1.8万人)
 1. [个人养老金最新开户情况曝光](https://so.toutiao.com/search?keyword=个人养老金最新开户情况曝光)
 1. [中央气象台发布暴雨蓝色预警](https://so.toutiao.com/search?keyword=中央气象台发布暴雨蓝色预警)
@@ -72,8 +85,6 @@
 1. [普京：俄罗斯几乎不存在失业情况](https://so.toutiao.com/search?keyword=普京：俄罗斯几乎不存在失业情况)
 1. [《与凤行》获得爆剧认证](https://so.toutiao.com/search?keyword=《与凤行》获得爆剧认证)
 1. [詹姆斯经纪人谈布朗尼参加选秀](https://so.toutiao.com/search?keyword=詹姆斯经纪人谈布朗尼参加选秀)
-1. [兰大回应虐猫考生进调剂名单](https://so.toutiao.com/search?keyword=兰大回应虐猫考生进调剂名单)
-1. [小米SU7标准版不支持城市NOA功能](https://so.toutiao.com/search?keyword=小米SU7标准版不支持城市NOA功能)
 1. [曝亚马逊超市AI技术背后系手动审查](https://so.toutiao.com/search?keyword=曝亚马逊超市AI技术背后系手动审查)
 1. [品牌饮料上架香菜汁且购买送呕吐袋](https://so.toutiao.com/search?keyword=品牌饮料上架香菜汁且购买送呕吐袋)
 1. [山东超然楼亮灯瞬间好惊艳](https://so.toutiao.com/search?keyword=山东超然楼亮灯瞬间好惊艳)
@@ -82,7 +93,6 @@
 1. [《斗破苍穹》萧炎将代表韩家应战](https://so.toutiao.com/search?keyword=《斗破苍穹》萧炎将代表韩家应战)
 1. [云南一工地挖出二战遗留航空炸弹](https://so.toutiao.com/search?keyword=云南一工地挖出二战遗留航空炸弹)
 1. [雷军：大家拿着放大镜看小米SU7](https://so.toutiao.com/search?keyword=雷军：大家拿着放大镜看小米SU7)
-1. [乌方称俄导弹袭哈尔科夫市已致7死](https://so.toutiao.com/search?keyword=乌方称俄导弹袭哈尔科夫市已致7死)
 1. [清明济南变“挤”南](https://so.toutiao.com/search?keyword=清明济南变“挤”南)
 1. [88岁硬核爷爷惊艳上海时装周](https://so.toutiao.com/search?keyword=88岁硬核爷爷惊艳上海时装周)
 1. [奥乌苏：创造出很多机会但没把握住](https://so.toutiao.com/search?keyword=奥乌苏：创造出很多机会但没把握住)
